# dev-chronicles

./: .gitignore  IMPROVEMENTS_QUICK_REF.md  IMPROVEMENTS_SUMMARY.md  README.md  dev.sh  index.html  package-lock.json  package.json  quick_setup.py  run.sh  test_app_start.sh  test_web_version.sh  update_api_key.py  vite.config.ts
.github/: copilot-instructions.md
docs/: ingest-samples.md
extensions/: SETUP.md  test-extensions.sh
extensions/browser-logger/: README.md  background.js  content.js  manifest.json
extensions/terminal-logger/: README.md  dev-chronicle-hook.sh
extensions/vscode-logger/: README.md  package-lock.json  package.json  tsconfig.json
extensions/vscode-logger/src/: extension.ts
src/: App.tsx  Cargo.toml  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  python_tauri_icon_gen.py  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/ai/: client.rs  mod.rs
src-tauri/src/db/: mod.rs  models.rs  schema.sql
src-tauri/src/sanitizer/: mod.rs
src-tauri/src/server/: handlers.rs  mod.rs
src/components/Dashboard/: CollapsibleSection.tsx  Dashboard.tsx  ReportView.tsx  ReportsList.tsx  Timeline.tsx
src/components/Settings/: Settings.tsx
src/plugins/: model.rs  output.rs  paths.rs  plug.rs  plugin.rs  utils.rs
src/utils/: tauri.ts
